Added template strings for sidebar and bookmarks

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <section>
         <div class="container centered">
             <div class="row">
-                <div class="two columns">
-                    <button>Button</button>
-                    <select name="" id="">
+                <div class="two columns js-sidebar">
+                    <button class="js-add-bookmark">Button</button>
+                    <select name="" id="" class="js-filter-stars">
                         <option value="all">Filter stars</option>
                         <option value="fivestars">5 Stars or higher</option>
                         <option value="fourstars">4 Stars or higher</option>
