--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
                         <label for="url"></label>
                         <input name="url" id="unique-title" type="text" placeholder="Enter URL">
 
-                        <label for="description"></label>
-                        <textarea name="description" id="" cols="30" rows="10" placeholder="Enter description"></textarea><br>
+                        <label for="desc"></label>
+                        <textarea name="desc" id="" cols="30" rows="10" placeholder="Enter description"></textarea><br>
 
                         <label for="stars"></label>
-                        <input type="radio" name="stars" id="">1
-                        <input type="radio" name="stars" id="">2
-                        <input type="radio" name="stars" id="">3
-                        <input type="radio" name="stars" id="">4
-                        <input type="radio" name="stars" id="">5<br>
+                        <input type="radio" name="stars" id="" value="1">1
+                        <input type="radio" name="stars" id="" value="2">2
+                        <input type="radio" name="stars" id="" value="3">3
+                        <input type="radio" name="stars" id="" value="4">4
+                        <input type="radio" name="stars" id="" value="5">5<br>
 
                         <input type="submit" value="Submit">
                     </form>
