--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container centered">
             <div class="row">
                 <div class="two columns js-sidebar">
-                    <button class="js-add-bookmark">Button</button>
+                    <!-- <button class="js-add-bookmark">Button</button>
                     <select name="" id="" class="js-filter-stars">
                         <option value="all">Filter stars</option>
                         <option value="fivestars">5 Stars or higher</option>
@@ -30,10 +30,10 @@
                         <option value="threestars">3 Stars or higher</option>
                         <option value="twostars">2 Stars or higher</option>
                         <option value="onestars">1 Star or higher</option>
-                    </select>
+                    </select> -->
                 </div>
                 <div class="ten columns bookmarks">
-                    <form action="">
+                    <!-- <form action="">
                         <h3>Add Bookmark</h3>
                         <label for="title"></label>
                         <input name="title" id="unique-title" type="text" placeholder="Enter Title">
@@ -70,7 +70,7 @@
                         <div class="stars-outer">
                             <div class="stars-inner"></div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
