--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <header>
+    <header role="banner">
         <div class="container">
             <div class="twelve columns centered">
                 <h1>Linkful</h1>
@@ -18,7 +18,7 @@
         </div>
     </header>
 
-    <section>
+    <main role="main" aria-live="assertive">
         <div class="container centered">
             <div class="row">
                 <div class="two columns js-sidebar">
@@ -27,7 +27,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </main>
     
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
