Added error handling and started work on edit functionality

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
     <main role="main" aria-live="assertive">
         <div class="container centered">
             <div class="row">
-                <div class="two columns js-sidebar">
-                </div>
-                <div class="ten columns bookmarks">
-                </div>
+                <div class="two columns js-sidebar"></div>
+                <div class="ten columns bookmarks"></div>
             </div>
         </div>
     </main>
