--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="./scripts/accessibility.js"></script>
     <script src="./scripts/extendJquery.js"></script>
     <script src="./scripts/api.js"></script>
     <script src="./scripts/store.js"></script>
